--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
 
-    {% include head.html %}
+  {% include head.html %}
 
   <body>
 
-  {% include sidebar.html %}
+    {% include sidebar.html %}
 
   <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-       content to avoid any CSS collisions with our real content. -->
+  content to avoid any CSS collisions with our real content. -->
   <div class="wrap">
     <div class="masthead">
       <div class="container">
@@ -26,23 +26,25 @@
   </div>
 
 
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
-    <script>
-      (function(document) {
-        var toggle = document.querySelector('.sidebar-toggle');
-        var sidebar = document.querySelector('#sidebar');
-        var checkbox = document.querySelector('#sidebar-checkbox');
+  <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+  <script>
+    (function(document) {
+      var toggle = document.querySelector('.sidebar-toggle');
+      var sidebar = document.querySelector('#sidebar');
+      var checkbox = document.querySelector('#sidebar-checkbox');
 
-        document.addEventListener('click', function(e) {
-          var target = e.target;
+      document.addEventListener('click', function(e) {
+        var target = e.target;
 
-          if(!checkbox.checked ||
-                  sidebar.contains(target) ||
-                  (target === checkbox || target === toggle)) return;
+        if(!checkbox.checked ||
+          sidebar.contains(target) ||
+          (target === checkbox || target === toggle)) return;
 
           checkbox.checked = false;
-        }, false);
-      })(document);
-    </script>
-  </body>
+      }, false);
+    })(document);
+  </script>
+  {% include chatango.html %}
+</script>
+</body>
 </html>
