--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,9 @@
 
   <title>
     {% if page.title == "Beranda" %}
-      {{ site.title }}
+    {{ site.title }}
     {% else %}
-      {{ page.title }}
+    {{ page.title }}
     {% endif %}
   </title>
   {% include meta.html %}
@@ -31,4 +31,18 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <script type='text/javascript'>
+    (function() {
+      var s = document.createElement('script');
+      s.type = 'text/javascript';
+      s.async = true;
+      s.src = '//d3a5udlxrolr3e.cloudfront.net/resource/chat.js';
+      var x = document.getElementsByTagName('script')[0];
+      x.parentNode.insertBefore(s, x);
+    })();
+
+    window.embeddedChatAsyncInit = function() {
+      embeddedChat.init("5388");
+    }
+  </script>
 </head>
