--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,9 @@
   {% include head.html %}
 
   <body>
+    <div class="embedded-chat"></div>
 
-    {% include sidebar.html %}
+  {% include sidebar.html %}
 
   <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
   content to avoid any CSS collisions with our real content. -->
@@ -24,7 +25,6 @@
       {{ content }}
     </div>
   </div>
-
 
   <label for="sidebar-checkbox" class="sidebar-toggle"></label>
   <script>
@@ -45,6 +45,5 @@
     })(document);
   </script>
   {% include chatango.html %}
-</script>
 </body>
 </html>
